src/objects/Alerts__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Manage Alerts</description>
    <fields>
        <fullName>Close_Date__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Close Date</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Notes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sales__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sales</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Update_Alerts__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Update Alerts</label>
        <type>Checkbox</type>
    </fields>
    <label>Alerts</label>
</CustomObject>